# pika

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
documents/: sample-hr-policy.md
scripts/: test.bat  test.sh
src/pika/: __init__.py  config.py  main.py
src/pika/api/: routes.py  web.py
src/pika/services/: app_config.py  audit.py  auth.py  database.py  documents.py  history.py  metrics.py  ollama.py  rag.py
src/pika/static/: style.css
src/pika/templates/: admin.html  base.html  index.html  login.html  logs.html  setup.html
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_backup.py  test_circuit_breaker.py  test_concurrency_safety.py  test_documents.py  test_graceful_degradation.py  test_multiuser_queries.py  test_multiuser_sessions.py  test_ollama.py  test_production_readiness.py  test_query_cache.py  test_queue.py  test_rag.py  test_security.py
