[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pika"
version = "0.1.0"
description = "Self-hosted RAG system for small businesses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.109.0",
    "uvicorn[standard]~=0.27.0",
    "pydantic~=2.5.0",
    "pydantic-settings~=2.1.0",
    "jinja2~=3.1.0",
    "python-multipart~=0.0.6",
    "httpx~=0.26.0",
    "aiohttp~=3.9.0",
    "requests~=2.31.0",
    "pypdf~=4.0.0",
    "python-docx~=1.1.0",
    "numpy<2.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "bcrypt~=4.1.0",
    "slowapi~=0.1.9",
    "prometheus-client~=0.20.0",
    "python-json-logger~=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pytest-asyncio~=0.23.0",
    "pytest-cov~=4.1.0",
    "httpx~=0.26.0",
    "ruff~=0.4.0",
    "pip-audit~=2.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/pika"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
